# personal_website

./: .env.example  .gitignore  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml
apps/ai-service/: Dockerfile  pyproject.toml  requirements.txt
apps/ai-service/migrations/: 001_add_system_settings_and_contact_leads.sql  002_add_blog_posts.sql
apps/ai-service/src/: config.py  main.py
apps/ai-service/src/agent/: __init__.py  context.py  factory.py  registry.py
apps/ai-service/src/agent/tools/: __init__.py  actions.py  info.py  portfolio.py  search.py
apps/ai-service/src/api/: __init__.py  schemas_.py
apps/ai-service/src/api/routes/: __init__.py  blog.py  chat.py  portfolio.py
apps/ai-service/src/api/routes/admin/: __init__.py  agents.py  auth.py  blog.py  dashboard.py  knowledge.py  portfolio.py  sessions.py  settings.py  tools.py
apps/ai-service/src/api/schemas/: __init__.py  admin.py  chat.py  portfolio.py
apps/ai-service/src/database/: __init__.py  connection.py  models.py
apps/ai-service/src/services/: auth.py
apps/ai-service/src/utils/: __init__.py  datetime.py
apps/ai-service/tests/: conftest.py  test_agent_context.py  test_auth_api.py  test_auth_service.py  test_blog_api.py  test_health.py
docs/: 00-system-overview.md  01-runtime-flows.md  02-codebase-review-map.md  03-maintenance-checklist.md  04-frontend-performance.md  05-implementation-performance-guardrails.md  README.md  blog-module.md  liquid-glass-component.md  messenger-feature.md
scripts/: init-db.sh  setup-with-user.sh  setup.sh
(+120 files in other folders)
